fixed genres overflow

--- a/src/components/Show/ShowBanner/ShowBanner.css
+++ b/src/components/Show/ShowBanner/ShowBanner.css
@@ -49,6 +49,7 @@
   flex-direction: row;
   gap: 10px;
   padding-bottom: 0px;
+  overflow-x: auto;
 }
 
 .show-banner-ratings {
